--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/imachug/JsOS-emu#readme",
   "dependencies": {
+    "opn": "^5.3.0",
     "ws": "^5.1.1"
   }
 }
